--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs: # 작업을 정의
          
   SSH:  # 두번째작업: SSH
     needs: build-and-deploy # 첫번째작업인 build-and-deploy 작업이 완료된 후 실행
-    runs-on: ubuntu-latest  # 가상의 최신우분투(리눅스종류임) 컴퓨터가 만들어짐
+    runs-on: ubuntu-latest  # 가상의 최신우분투(리눅스종류임니다) 컴퓨터가 만들어짐
     steps:  # step은 job안쪽에 개별단계를 의미
       - uses: actions/checkout@v3 # 깃허브에서 제공하는 checkout@v3 기능 사용하여 소스가져오기
       - name: ssh to ec2	# 단계이름 'ssh to ec2(ec2에 ssh로 접근 mobaXterm에서 했던작업
