--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
-# datasource
+# datasourced
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://mysql.cvygoeu8aoj2.ap-northeast-2.rds.amazonaws.com/web_db?serverTimezone=UTC&useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=web
